Programming/k8s/oci/40-data-science-workspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-science
  labels:
    app.kubernetes.io/part-of: aims-platform
    environment: development
    owner: chulinh
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
